<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recepiesactivty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="403dp"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:background="@color/grey"

        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <ScrollView
        android:layout_marginStart="12dp"
        android:layout_width="match_parent"
        android:layout_height="665dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TV_namemeal2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/meal"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/namemeal2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/meal"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/type"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/spinnerType2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:outlineAmbientShadowColor="@color/white"
                android:outlineSpotShadowColor="@color/white"
                android:pointerIcon="arrow"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/time"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/time2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/price"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/price2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/ocassion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/occasion"
                android:textColor="@color/white"
                tools:ignore="SpeakableTextPresentCheck" />

            <Spinner
                android:id="@+id/spinnerOcassion2"
                android:layout_width="394dp"
                android:layout_height="48dp"
                android:outlineAmbientShadowColor="@color/white"
                android:outlineSpotShadowColor="@color/white"
                android:pointerIcon="arrow"

                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/serving"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/servings2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/serving"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:textColor="@color/white" />


            <EditText
                android:id="@+id/description2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ingredients"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/ingredient2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/ingredient"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/addpicture2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update Image"

                />

            <Button
                android:id="@+id/addrecipes2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update Recipie" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>